[metadata]
name = merchant
version = 0.0.1
description = reinforcment learning for finance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mercator-labs/mercator
author = Dominique F. Garmier
auther_email = dominique@garmier.ch
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = merchant
python_requires = >=3.8
install_requires =
    numpy
    pandas
    pandas_ta
    ray[rllib,tune,serve]>=1.13.0
    torch>=1.12.0
    wandb>=0.12.20
    plotly
    pystore
    python-dotenv
    yfinance

[options.entry_points]
console_scripts =
    merchant = merchant.main:main

[flake8]
count = True
statistics = True
max-line-length = 127
extend-exclude = .venv, .pyc
ignore=F401,E123,W503

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
exclude = (setup.py|build/|tests/)

[tool:pytest]
python_files = tests/*.py tests/**/*.py tests.py test_*.py *_tests.py
